--- a/l/la/lar/largeanimal.com.html
+++ b/l/la/lar/largeanimal.com.html
@@ -1,8 +1,25 @@
-<!--The following is the downloaded HTML source of the largeanimal.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213200842id_/http%3A//largeanimal.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the largeanimal.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032932id_/http%3A//www.largeanimal.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
-<link rel="stylesheet" href="/common/css/LAG.css">
+<title>Large Animal Games</title>
+<meta name="Description" content="Large Animal Games, creators of RocketBowl, Saints &amp; Sinners Bingo, Saints &amp; Sinners Bowling, and other high quality, addictive, and free online games.">
+<meta name="Keywords" content="game development, game developer, game
+business, game jobs, game technology, game producer, digital entertainment,
+casual game, casual games, online games, web games, independent game
+developer, PC game, new game, game downloads, free game downloads, puzzle
+games, arcade games, shareware games, game demos, action games, strategy
+games, eCard games, ecards, Game Developers Conference, IGDA,
+Independent Game Developers Association, IGF award, Independent
+Games Festival, online game development, new york city, RocketBowl,
+Rocket Bowl, Rocketbowl, Saints &amp; Sinners Bingo, Girls Inc. Team Up, Alpha
+Queue, Birthday Balloons, unipong, LEGO Bricktopia">
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-403482-1";
+urchinTracker();
+</script><link rel="stylesheet" href="/common/css/LAG.css">
 <script language="javascript" src="/common/js/rollover.js"></script>
 <script language="javascript" src="/common/js/browser_detect.js"></script>
 <script language="javascript" src="/common/js/memfunc.js"></script><!--Benefits Layer Popups Here --></head><body bgcolor="#010066" leftmargin="7" topmargin="0" bottommargin="0"><div id="closebenefits" style="z-index: 2; visibility:hidden; position: absolute; left: 250px; top: 100px; height: 260px; width: 357px;"><a href="#" onclick="hideBenefits();"><img src="/img/site/spacer.gif" width="357" height="260" border="0"></a></div><div id="benefits" style="z-index: 1; visibility:hidden; position: absolute; left: 250px; top: 100px; height: 260px; width: 357px; "><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="center"><img src="/img/site/header_memberBenefits.jpg"></td></tr><tr><td width="357" height="215" align="left" background="/img/site/member_benefits_bg.gif"><span class="norm"><ul style="list-style-image: url(/img/site/bullet_benefits.gif); margin-top: 5px; margin-bottom: 5px;"><li>New product announcements<br></li><li>Special sales updates<br></li><li>Access to exclusive promotions<br></li><li>Invitations to Large Animal parties, workshops, and events<br></li><li>Invitations to Large Animal tournaments, FREE games, and give-a-ways!</li></ul><center><u>Click anywhere to close this window</u></center></span></td></tr></tbody></table></div><!-- ENd Bene Pop -->
@@ -17,10 +34,10 @@
 		<td align="LEFT" valign="TOP">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="143" height="483" id="features" align="middle">
 			<param name="allowScriptAccess" value="sameDomain">
-			<param name="movie" value="/img/site/swf/features.swf?homepage=http://www.largeanimal.com/">
+			<param name="movie" value="/img/site/swf/features.swf?homepage=http://largeanimal.com/">
 			<param name="quality" value="high">
 			<param name="bgcolor" value="#010066">
-			<embed src="/img/site/swf/features.swf?homepage=http://www.largeanimal.com/" quality="high" bgcolor="#010066" width="143" height="483" name="features" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
+			<embed src="/img/site/swf/features.swf?homepage=http://largeanimal.com/" quality="high" bgcolor="#010066" width="143" height="483" name="features" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
 			</object>
 			<br><center>
 			<a class="help" target="_top" href="/support/"><img src="/img/site/siteHelp_up.gif" vspace="5" border="0"></a>
@@ -36,7 +53,24 @@
 						<td valign="TOP" align="LEFT">
 							<!-- FEATURE BAR -->	
 							<table align="LEFT" valign="TOP" width="619" border="0" bgcolor="#010066" cellpadding="0" cellspacing="0">
-	<tbody><tr>  		<td width="10">  			<img src="/img/site/spacer.gif" width="10" height="25" border="0">  		</td>  		  		<td width="296">  			<iframe src="/common/newsbox.php" width="296" height="136" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" name="newsbox">  			</iframe>  		</td>  		<td width="8">  			<img src="/img/site/spacer.gif" width="8" height="25" border="0">  		</td>  		  		<td>  			<iframe src="/common/join.php" width="296" height="136" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" name="membership">  			</iframe>  		</td>  		  		<td width="10">  			<img src="/img/site/spacer.gif" width="10" height="25" border="0">  		</td>
+	<tbody><tr>
+		<td width="10">  	
+			<img src="/img/site/spacer.gif" width="10" height="25" border="0">  		
+		</td>  		  		
+		<td width="296">  			
+			<iframe src="/common/newsbox.php" width="296" height="130" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" name="newsbox">  			
+			</iframe>  		
+		</td>  		
+			<td width="8">  			
+			<img src="/img/site/spacer.gif" width="8" height="25" border="0">  		
+		</td>  		  		
+		<td>  			
+			<iframe src="/common/join.php" width="296" height="130" scrolling="no" frameborder="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" name="membership">  			
+			</iframe>  		
+		</td>  		  		
+		<td width="10">  			
+			<img src="/img/site/spacer.gif" width="10" height="25" border="0">  		
+		</td>
 	</tr>
 	<tr><td width="5"><img src="/img/site/spacer.gif" width="10" height="5" border="0"></td></tr>
 </tbody></table>						</td>
@@ -47,7 +81,7 @@
 							<!-- MENU BAR -->	
 							<table align="CENTER" valign="TOP" width="619" border="0" cellpadding="0" cellspacing="0">
 		<tbody><tr>
-		<td><a target="_top" href="http://www.largeanimal.com/games/web/"><img border="0" src="/img/site/webgames_up.gif" width="130" height="41"></a><a target="_top" href="http://www.largeanimal.com/games/deluxe/"><img border="0" src="/img/site/deluxeGames_up.gif" width="147" height="41"></a><a target="_top" href="http://www.largeanimal.com/games/ecards"><img border="0" src="/img/site/ecardGames_up.gif" width="141" height="41"></a><a target="_top" href="http://www.largeanimal.com/news"><img border="0" src="/img/site/news_up.gif" width="68" height="41"></a><a href="http://www.largeanimal.com/discuss"><img border="0" src="/img/site/discussions_up.gif" width="133" height="41"></a></td>
+		<td><a target="_top" href="http://largeanimal.com/games/web/"><img border="0" src="/img/site/webgames_up.gif" width="130" height="41"></a><a target="_top" href="http://largeanimal.com/games/deluxe/"><img border="0" src="/img/site/deluxeGames_up.gif" width="147" height="41"></a><a target="_top" href="http://largeanimal.com/games/ecards"><img border="0" src="/img/site/ecardGames_up.gif" width="141" height="41"></a><a target="_top" href="http://largeanimal.com/news"><img border="0" src="/img/site/news_up.gif" width="68" height="41"></a><a href="http://largeanimal.com/discuss"><img border="0" src="/img/site/discussions_up.gif" width="133" height="41"></a></td>
 		</tr>
 </tbody></table> 						</td>
 					</tr>
@@ -133,7 +167,7 @@
 	</tr>
 	<tr>
 		<td align="center"> 
-			<span class="copyright">Copyright Large Animal Games 2001-2005</span>
+			<span class="copyright">Copyright Large Animal Games 2001-2006</span>
 		</td>
 	</tr>
 </tbody></table>
