--- a/m/mo/mod/modchipstore.com.html
+++ b/m/mo/mod/modchipstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the modchipstore.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219110700id_/http%3A//modchipstore.com/customer/help.php%3Fsection%3Dbusiness) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the modchipstore.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615040855id_/http%3A//www.modchipstore.com/customer/help.php%3Fsection%3Dbusiness) for the most accurate reproduction.-->
 
 <html><head>
 <title>ModChipStore.com - Help section/ ModChipStore.com</title>
@@ -49,11 +49,12 @@ function submit_search(form) {
 <td><b>Search:</b>&nbsp;</td>
  <td> 
   <input class="small" type="text" name="substring" size="26" value="">
- </td></tr><tr><td>&nbsp;</td>
+ </td><td>&nbsp;</td>
 <td>
 	<select name="in_category" class="small">
 	<option value="">All</option>
 		<option value="3">Xbox</option>
+		<option value="290">Xbox 360</option>
 		<option value="103">PlayStation 2</option>
 		<option value="277">Sony PSP</option>
 		<option value="278">Nintendo DS</option>
@@ -73,16 +74,16 @@ function submit_search(form) {
 </tbody></table>
 </div>
 
-<a href="http://www.modchipstore.com/"><img src="../skin_swap/skin_css/images/logoxmas.gif" width="450" height="60" border="0" alt="Happy Holidays from ModChipStore.com"></a>
+<a href="http://www.modchipstore.com/"><img src="../skin_swap/skin_css/images/logo.gif" width="356" height="42" border="0" alt="ModChipStore.com"></a>
 
 	<div id="navcontainer">
 	<ul class="navlist">
 				<li><a href="http://www.modchipstore.com/customer/home.php?cat=3" title="Microsoft Xbox Modchips"><img src="../skin_swap/skin_css/images/xbox.gif" width="19" height="18" border="0" align="absmiddle" alt="Microsoft Xbox"> Xbox</a>
+                                           </li><li><a href="http://www.modchipstore.com/customer/home.php?cat=290" title="Microsoft Xbox 360 Modchips"><img src="../skin_swap/skin_css/images/xbox-360.gif" width="19" height="18" border="0" align="absmiddle" alt="Microsoft Xbox 360"> Xbox 360</a>
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=103" title="Sony Playstation 2 Modchips"><img src="../skin_swap/skin_css/images/ps2.gif" width="19" height="18" border="0" align="absmiddle" alt="Sony Playstation 2"> PS2</a>
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=277" title="Sony Portable PSP Modchips"><img src="../skin_swap/skin_css/images/psp-icon.gif" width="25" height="18" border="0" align="absmiddle" alt="Sony Portable PSP"> PSP</a>
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=278" title="Nintendo DS Portable"><img src="../skin_swap/skin_css/images/nintendo-ds.gif" width="19" height="18" border="0" align="absmiddle"> DS</a>		
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=265" title="Nintendo GameCube Modchips"><img src="../skin_swap/skin_css/images/gamecube.gif" width="19" height="18" border="0" align="absmiddle" alt="Nintendo GameCube"> GC</a>
-		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=108" title="Sony Playstation Modchips"><img src="../skin_swap/skin_css/images/ps1.gif" width="19" height="18" border="0" align="absmiddle" alt="Sony Playstation"> PS</a>
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=4" title="Pre-modified Game Consoles with a Modchip pre-installed"><img src="../skin_swap/skin_css/images/premod.gif" width="19" height="18" border="0" align="absmiddle" alt="Pre-modified Game Consoles"> Pre-Modified</a>
 		</li><li><a href="http://www.modchipstore.com/customer/home.php?cat=248" title="Modchip Installation Services"><img src="../skin_swap/skin_css/images/install.gif" width="19" height="18" border="0" align="absmiddle" alt="Modchip Installation Services"> Install Service</a>
 
@@ -166,6 +167,7 @@ function SwitchMenu(obj){
 <span class="sub" id="3">
 	
 	
+	
 <a class="subi" href="home.php?cat=255"></a><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=255">ModChips</a>
 	
 	
@@ -180,6 +182,10 @@ function SwitchMenu(obj){
 	
 	
 <a class="subi" href="home.php?cat=268"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=268">Controllers &amp; Accessories</a>
+	
+	
+	
+	
 	
 	
 	
@@ -213,8 +219,59 @@ function SwitchMenu(obj){
 	
 
 
+<div class="menutitle"><a href="home.php?cat=290">Xbox 360</a></div>
+<span class="sub" id="290">
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+<a class="subi" href="home.php?cat=291"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=291">ModChip Accessories</a>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+
+
 <div class="menutitle" onclick="SwitchMenu('103')"><a href="home.php?cat=103">PlayStation 2</a></div>
 <span class="sub" id="103">
+	
 	
 	
 	
@@ -232,7 +289,9 @@ function SwitchMenu(obj){
 	
 	
 	
+	
 <a class="subi" href="home.php?cat=250"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=250">Pre-Modified Consoles</a>
+	
 	
 	
 	
@@ -242,7 +301,9 @@ function SwitchMenu(obj){
 	
 	
 	
+	
 <a class="subi" href="home.php?cat=251"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=251">Installation Service</a>
+	
 	
 	
 	
@@ -269,8 +330,10 @@ function SwitchMenu(obj){
 <span class="sub" id="277">
 	
 	
+<a class="subi" href="home.php?cat=286"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=286">ModChips</a>
 	
-<a class="subi" href="home.php?cat=282"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=282">Hardware</a>
+	
+<a class="subi" href="home.php?cat=282"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=282">Pre-Modified Consoles</a>
 	
 	
 	
@@ -286,7 +349,12 @@ function SwitchMenu(obj){
 	
 	
 	
+	
 <a class="subi" href="home.php?cat=279"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=279">Accessories</a>
+	
+	
+	
+<a class="subi" href="home.php?cat=288"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=288">Installation Service</a>
 	
 	
 	
@@ -315,6 +383,11 @@ function SwitchMenu(obj){
 
 <div class="menutitle"><a href="home.php?cat=278">Nintendo DS</a></div>
 <span class="sub" id="278">
+	
+	
+	
+	
+	
 	
 	
 	
@@ -399,12 +472,18 @@ function SwitchMenu(obj){
 	
 	
 	
+	
+	
+	
+	
+	
 </span>
 
 <div class="menutitle" onclick="SwitchMenu('265')"><a href="home.php?cat=265">GameCube</a></div>
 <span class="sub" id="265">
 	
 <a class="subi" href="home.php?cat=269"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=269">ModChips</a>
+	
 	
 	
 	
@@ -426,7 +505,11 @@ function SwitchMenu(obj){
 	
 	
 	
+	
+	
+	
 <a class="subi" href="home.php?cat=271"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=271">Installation Service</a>
+	
 	
 	
 	
@@ -492,6 +575,11 @@ function SwitchMenu(obj){
 	
 	
 	
+	
+	
+	
+	
+	
 </span>
 
 <div class="menutitle" onclick="SwitchMenu('248')"><a href="home.php?cat=248">Install Service</a></div>
@@ -510,7 +598,12 @@ function SwitchMenu(obj){
 	
 	
 	
-<a class="subi" href="home.php?cat=257"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=257">Xbox</a>
+	
+<a class="subi" href="home.php?cat=289"></a></span></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=289">PSP</a>
+	
+<a class="subi" href="home.php?cat=257"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=257">Xbox</a>
+	
+	
 	
 	
 	
@@ -519,6 +612,7 @@ function SwitchMenu(obj){
 	
 	
 <a class="subi" href="home.php?cat=258"></a></li><li class="none" style="overflow: hidden;"><a class="subi" href="home.php?cat=258">PS2</a>
+	
 	
 	
 	
@@ -736,11 +830,11 @@ Throughout this Privacy Policy and the ModChipStore.com in its entirety, 'ModChi
 <div id="menu_container">
 	<div id="menu_content">
 	<div id="menu_hdr">
-	<div style="float:right;"><a href="http://www.modchipstore.com/support/rss/index.php?_m=news&amp;_a=view&amp;group=default" target="_blank"><img src="/support/themes/client_default/rsstitlesmall.gif" border="0" alt="RSS Feed"></a></div>	News
+	<div style="float:right;"><a href="http://www.modchipstore.com/support/rss"><img src="/support/themes/client_default/rsstitlesmall.gif" border="0" alt="ModChipStore RSS News Feed"></a></div>	News
 	</div>
 	<div id="menu_content_inside">
 	
-<h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=22&amp;group=default">New Firmware 1.75 for Matrix Infinity</a></h3><br><small>12.16.05 2:15 am</small><br><h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=21&amp;group=default">DMS EZI Lite in stock</a></h3><br><small>12.16.05 2:05 am</small><br><h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=20&amp;group=default">Matrix Infinity Stock is now V14</a></h3><br><small>12.16.05 2:01 am</small><br>
+<h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=37&amp;group=default">XBOX 360 connectivity kits have arrived!!!</a></h3><br><small>06.14.06 3:57 pm</small><br><h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=36&amp;group=default">UNDILUTED PLATINUM UPDATE</a></h3><br><small>06.13.06 1:12 pm</small><br><h3 style="display:inline;"><a href="http://www.modchipstore.com/support/index.php?_m=news&amp;_a=viewnews&amp;newsid=35&amp;group=default">XBOX 360 SECTION IS UP</a></h3><br><small>06.13.06 1:10 pm</small><br>
 
 <hr size="1">
 <table cellpadding="3" cellspacing="0" border="0">
@@ -813,7 +907,7 @@ Giveaways, Product News, Coupons, and more! </span><br>
 </tbody></table>
 
 
-<script language="JavaScript" src="/track.js"></script>
+
 
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
