--- a/s/st/stg/stgeorge.com.au.html
+++ b/s/st/stg/stgeorge.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stgeorge.com.au privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217034759id_/http%3A//stgeorge.com.au/privacy/default.asp%3Forc%3Dhome) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stgeorge.com.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615041207id_/http%3A//stgeorge.com.au/privacy/default.asp%3Forc%3Dhome) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>St.George Bank - Privacy &amp; Security</title>
@@ -15,37 +15,58 @@
 
 <link rel="stylesheet" href="/resources/sgb/css/sgbcss2.css" media="screen">
 
-<link rel="stylesheet" href="/resources/sgb/css/Maccss2.css" media="screen">
 <link rel="stylesheet" href="/resources/sgb/css/print.css" media="print">
 </head>
 <body>
 <div id="TopNav">
-<a href="/default.asp?startpage=false"><img src="/resources/sgb/images/misc/1x1.gif" width="200" height="59" border="0" alt="St.George" align="right"></a>
-<a name="top" id="top"></a>
+		<a href="http://www.stgeorge.com.au/default.asp"><img src="/resources/sgb/images/misc/blank.gif" width="190" height="71" border="0" alt="St.George Home" align="left"></a>
+		<a name="top" id="top"></a>
+
+	<div id="searchbox">
+					 <span>SEARCH</span><br>
+					<form action="http://search.freefind.com/find.html" method="get" target="_self">
+					    <input type="hidden" name="id" value="74094051">
+					    <input type="hidden" name="pageid" value="r">
+					    <input type="hidden" name="mode" value="ALL">
+					    <input type="hidden" name="t" value="s">
+					    <input type="text" class="input" name="query" value="Keyword(s)" onclick="clickclear(this, 'Keyword(s)')" onblur="clickrecall(this,'Keyword(s)')">
+						<div><input type="submit" value="go::" name="search" class="searchbutton"></div>
+					 </form>
+	</div>
+	
+	<div id="menu"><a href="/contact_us/default.asp?orc=home">contact us</a><a href="javascript:NewWindow('/rates/default.asp?orc=home')" style="padding-left:23px;">interest rates</a><br>
+			<a href="javascript:NewWindow('http://www.nowwhere.com.au/StGeorgeBank/Locator/default.aspx')">find a branch</a><a href="/calculators/default.asp?orc=home">calculators</a>
+	</div>
+
 </div>
+
+
 <div id="TopToolBar">
   <div id="TopToolBarLeft">
-    17 December 2005
+    June 15,  2006
   </div>
   <div id="TopToolBarRight">
-    <a href="/default.asp" class="TopToolBarRight">home</a> / <a href="/contact_us/default.asp?orc=home" class="TopToolBarRight">contact us</a> / <a class="TopToolBarRight" href="javascript:NewWindow('http://www.nowwhere.com.au/StGeorgeBank/Locator/default.aspx') ">locate us</a> / <a class="TopToolBarRight" href="javascript:NewWindow('/rates/default.asp?orc=home')">rates</a> / <a href="/calculators/default.asp?orc=home" class="TopToolBarRight">calculators</a> /  <a href="/media_centre/news/default.asp?orc=media" class="TopToolBarRight">news</a> / <a href="/privacy/default.asp?orc=home" class="TopToolBarRight">privacy &amp; security</a> / <a href="/sitemap/default.asp?orc=home" class="TopToolBarRight">sitemap</a>  
+    <a href="/default.asp" class="TopToolBarRight">Home</a> | <a href="/about/default.asp?orc=about" class="TopToolBarRight">About us</a> | <a class="TopToolBarRight" href="/media_centre/default.asp?orc=media">Media Centre</a> | <a class="TopToolBarRight" href="/privacy/default.asp?orc=home">Privacy &amp; Security</a> | <a href="/sitemap/default.asp?orc=home" class="TopToolBarRight">Sitemap</a>
   </div>
 </div>
 
-
 	 <div id="Penchant">
-  		<div id="PenchantText">Privacy Policy </div>
+  		<div id="PenchantText">Privacy Policy</div>
+		<div id="PenchantFont">
+<div class="fontChange">
+ <a href="javascript:window.print()" ;="" title="Print this page" onfocus="this.blur()"><img src="/resources/sgb/images/buttons/a_print.gif" border="0" alt="Print this page"><div>Print this Page</div></a>
+ <a href="#" onclick="cFont(this.className)" onfocus="this.blur()" class="small"><strong>A</strong><div>Font Size: <span style="color:#cc3300">Small</span></div></a>
+ <a href="#" onclick="cFont(this.className)" onfocus="this.blur()" class="medium"><strong>A</strong><div>Font Size: <span style="color:#cc3300">Medium</span></div></a>
+ <a href="#" onclick="cFont(this.className)" onfocus="this.blur()" class="large"><strong>A</strong><div>Font Size: <span style="color:#cc3300">Large</span></div></a>
+</div>
+</div>
 	</div>
 	<div id="TitleBar">
   	<div id="TitleText">
-    	<h1>Privacy &amp; Security</h1>
+  	<h1>Privacy &amp; Security</h1>
   	</div>
-  	<div id="TitlePrint"><div style="padding : 2px; border : 0px dashed #ccc; background :#fff;">
-<a href="javascript:window.print();" title="Print this page"><img src="/resources/sgb/images/buttons/a_print.gif" border="0" alt="Print this page"></a>&nbsp;<a href="#" onclick="fontSizer(1,'px')"><img src="/resources/sgb/images/buttons/a_large.gif" border="0" alt="See larger fonts"></a>&nbsp;<a href="#" onclick="fontSizer(-1,'px')"><img src="/resources/sgb/images/buttons/a_small.gif" border="0" alt="See smaller fonts"></a>
-</div>
-
-</div>
 	</div>
+
 	
 <div id="container">
   <div id="content">
@@ -270,21 +291,18 @@ Individuals are granted limited license to retrieve or print a copy from files m
 <br>
 Copyright © St.George Bank Limited ABN 92 055 513 070 AFS Licence No. 240997<br><br>
 <strong>Document URL</strong>: http://www.stgeorge.com.au/privacy/default.asp<br>
-<strong>Date and time printed</strong>: Saturday, 17 December 2005 - 2:47:58 PM (AEST)<br>
+<strong>Date and time printed</strong>: Thursday, 15 June 2006 - 2:12:06 PM (AEST)<br>
 
 	</div>
 
   <div id="Footer"> 
     
-<br>
-<div style="padding : 2px; border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
- <a href="/disclaimer.asp?orc=home">Disclaimer</a>&nbsp;&nbsp; •&nbsp;&nbsp;<a href="#top">Back to Top</a>&nbsp;&nbsp; •&nbsp;&nbsp;<a href="/privacy/default.asp?orc=home">Privacy</a><br>
-
+<div style="padding:2px">
  
- 	 	<a href="/default.asp" accesskey="1">Home</a> / <a href="/personalsol/default.asp?orc=personal" accesskey="2">Personal Solutions</a> / <a href="/wealth/default.asp?orc=wealth" accesskey="3">Wealth Management Solutions</a> / <a href="/smallbus/default.asp?orc=business" accesskey="4">Small Business Solutions</a> / <a href="/rural/default.asp?orc=regional" accesskey="5">Rural &amp; Regional Solutions</a> / <a href="/corporate/default.asp?orc=corporate" accesskey="6">Corporate &amp; Business Bank</a> /  <a href="/institution/default.asp?orc=institution" accesskey="7">Institutional &amp; Financial Mkts</a>
- 		/ <a href="/about/investor/default.asp?orc=investor" accesskey="8">Shareholder Centre</a> / <a href="/media_centre/default.asp?orc=media" accesskey="9">Media Centre</a> / <a href="/about/default.asp?orc=about" accesskey="0">About St.George Bank</a>
- 
+ <a href="/disclaimer.asp?orc=home">Disclaimer</a> | <a href="#top">Back to Top</a> | <a href="/privacy/default.asp?orc=home">Privacy</a>
 </div>
+ <!--  -->
+
   <div id="disclaimer">
 
 	<strong>©&nbsp;St.George Bank Limited ABN 92 055 513 070 AFS Licence No. 240997</strong><br>
@@ -305,37 +323,17 @@ Limited  is the product issuer of the deposit and payment products referred to o
 
 <div id="RightNav"> 
   
-<!-- Branch Search -->
-<div style="float: right; padding-right: 5px;">
-  <a href="javascript:NewWindow('http://www.nowwhere.com.au/StGeorgeBank/Locator/default.aspx')"><img src="/resources/sgb/images/interface/findabranch.gif" alt="Find a branch" border="0"></a>
-</div>
-<!-- End Branch Search -->
-<!-- Search Engine -->
-<div id="RightMenuHeading">
-  <div id="RightMenuHeadingText">search</div></div>
-    <div id="RightMenuContent" style="padding: 0px 0px 0px 1px;">
-		<form action="http://search.freefind.com/find.html" method="get" target="_self">
-        <input type="hidden" name="id" value="74094051">
-        <input type="hidden" name="pageid" value="r">
-        <input type="hidden" name="mode" value="ALL">
-        <input type="hidden" name="t" value="s">
-        <input type="text" name="query" style="width:114px;height:17px" onblur="javascript:className='input'" class="input" onfocus="javascript:className='inputfocus'">
-	    <input type="submit" value="go::" name="search" class="searchbutton">
-  		</form>
-	</div>
-<!-- End Search Engine -->
-
 <form method="post" name="login_form">
 <div id="RightMenuHeading">
-<div id="RightMenuHeadingText">online services</div></div>
+<div id="RightMenuHeadingText">Online Services</div></div>
 <div id="RightMenuContent" style="border-bottom: 0px solid #fff;">
-<table width="100%" border="0" cellpadding="1" cellspacing="2">
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-<td width="5%"><input class="radioright" type="radio" valign="bottom" name="selectlog" value="javascript:IBWindow('https://ibank.stgeorge.com.au/html/redirect.asp'),/int_bank/default.asp?orc=personal" checked="checked"></td>
-<td width="95%"><div id="menulable">Internet Banking</div></td>
+<td width="2%"><input class="radioright" type="radio" valign="bottom" name="selectlog" value="javascript:IBWindow('https://ibank.stgeorge.com.au/html/redirect.asp'),/int_bank/default.asp?orc=personal" checked="checked"></td>
+<td width="98%"><div id="menulable">Internet Banking</div></td>
 </tr>
 <tr>
-<td><input class="radioright" type="radio" name="selectlog" value="https://bbonline.stgeorge.com.au/html/cbank.asp,/bbo/default.asp?orc=business"></td>
+<td><input class="radioright" type="radio" name="selectlog" value="javascript:BBOWindow('https://bbonline.stgeorge.com.au/html/cbank.asp'),/bbo/default.asp?orc=business"></td>
 <td><div id="menulable">Business Banking Online</div></td>
 </tr>
 <tr>
@@ -348,12 +346,14 @@ Limited  is the product issuer of the deposit and payment products referred to o
 </tr>
 </tbody></table>
 </div>
-<a href="javascript:Login(1)"><img src="/resources/sgb/images/interface/logon.gif" alt="logon" border="0" vspace="0"></a><a href="javascript:Login(2)"><img src="/resources/sgb/images/interface/learnmore.gif" alt="learn more" border="0" vspace="0"></a>
+<a href="javascript:Login(1)"><img src="/resources/sgb/images/interface/logon.gif" alt="logon" border="0" vspace="0"></a><a href="javascript:Login(2)"><img src="/resources/sgb/images/interface/learnmore.gif" alt="learn more" border="0" width="73" vspace="0"></a>
 </form>
+
+<div class="Spacer"></div>
 
 
 <div id="RightMenuHeading">
-<div id="RightMenuHeadingText">apply now</div></div>
+<div id="RightMenuHeadingText">Apply now</div></div>
 <div id="RightMenuContent">
 <ul id="navlist">
 <li><a href="/apps/default.asp?apptype=PLA&amp;origin=SIC&amp;Source=STG">Personal Loans</a></li>
@@ -365,6 +365,9 @@ Limited  is the product issuer of the deposit and payment products referred to o
     <li><a href="javascript:NewWindow('https://olaex.stgeorge.com.au/MLWebstart.asp?origin=SIC')">Margin Lending</a></li>
   </ul>
 </div>
+
+
+<div class="Spacer"></div>
 
 <br><a href="/about/your_security/secure.asp?orc=personal"><img src="/resources/sgb/images/logos/sgbsecure_small.gif" border="0" alt="St.George Secure Logo"></a>
 
