--- a/a/al/alz/alzheimers.org.uk.html
+++ b/a/al/alz/alzheimers.org.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alzheimers.org.uk privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210051445id_/http%3A//www.alzheimers.org.uk/About_our_work/About_this_website/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alzheimers.org.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615042146id_/http%3A//www.alzheimers.org.uk/About_our_work/About_this_website/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/mainsite_2_col.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="title" -->
@@ -94,7 +94,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tbody><tr>
   	<!-- InstanceBeginEditable name="crumbs" --> 
     <td bordercolor="#003399" bgcolor="#003399"><a name="top" style="font-size:0px"></a><img src="/display_images/spacer.gif" alt="" width="10" height="1"> 
-      <script language="JavaScript">breadCrumbs("http://www.alzheimers.org.uk","/","index.htm","crumb","crumb","crumb","0");</script><a href="../../../../../../index.htm" class="crumb">Home</a>  <span class="crumb">/</span> <a href="../../../../../index.htm" class="crumb">20051210051445id </a>  <span class="crumb">/</span> <a href="../../../../index.htm" class="crumb">Http:</a>  <span class="crumb">/</span> <a href="../../../index.htm" class="crumb"></a>  <span class="crumb">/</span> <a href="../../index.htm" class="crumb">Www.alzheimers.org.uk</a>  <span class="crumb">/</span> <a href="../index.htm" class="crumb">About our work</a>  <span class="crumb">/</span> <a href="index.htm" class="crumb">About this website</a>  <span class="crumb">/</span>  </td>
+      <script language="JavaScript">breadCrumbs("http://www.alzheimers.org.uk","/","index.htm","crumb","crumb","crumb","0");</script><a href="../../../../../../index.htm" class="crumb">Home</a>  <span class="crumb">/</span> <a href="../../../../../index.htm" class="crumb">20060615042146id </a>  <span class="crumb">/</span> <a href="../../../../index.htm" class="crumb">Http:</a>  <span class="crumb">/</span> <a href="../../../index.htm" class="crumb"></a>  <span class="crumb">/</span> <a href="../../index.htm" class="crumb">Www.alzheimers.org.uk</a>  <span class="crumb">/</span> <a href="../index.htm" class="crumb">About our work</a>  <span class="crumb">/</span> <a href="index.htm" class="crumb">About this website</a>  <span class="crumb">/</span>  </td>
     <!-- InstanceEndEditable -->
   </tr>
 </tbody></table>
@@ -175,7 +175,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 		<li class="menubar"><a class="actuator" href="/Caring_for_someone_with_dementia/index.htm">Caring for someone with dementia</a></li>
 		<li class="menubar"><a class="actuator" href="/Working_with_people_with_dementia/index.htm">Working with people with dementia</a></li>
 		<li class="menubar"><a class="actuator" href="/Research/index.htm">Research</a></li>
-		<li class="menubar"><a class="actuator" href="/Real_lives/index.htm">Real Lives</a></li>		
+		<li class="menubar"><a class="actuator" href="/Real_lives/index.htm">Real 
+          lives</a></li><li class="menubar"><a class="actuator" href="/TalkingPoint/discuss/">Talking Point</a></li>		
 	</ul>
 </td></tr>
 <tr><td bgcolor="#003399" style="padding: 3px 2px 3px 10px" valign="baseline"><img src="/display_images/menu_about_the_society.gif" alt="About the Alzheimer's Society"></td></tr>
