--- a/t/ta/tam/tamilbeat.com.html
+++ b/t/ta/tam/tamilbeat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tamilbeat.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212001726id_/http%3A//tamilbeat.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tamilbeat.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044024id_/http%3A//tamilbeat.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>TamilBeat.Com - Your Online Source for Quality Tamil Mp3's</title>
@@ -175,20 +175,7 @@ td.row1	{ background-color: #EFEFEF; }
 		<tr valign="top">
 			<td height="44" style="vertical-align: top; border-top-style:none; border-top-width:medium" width="160" background="images/menutop.jpg">
 
-&nbsp;<script type="text/javascript"><!--
-google_ad_client = "pub-6605511876609007";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_channel ="";
-google_color_border = "D0E2F6";
-google_color_bg = "D0E2F6";
-google_color_link = "618897";
-google_color_url = "000000";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></td>
+</td>
 		</tr>
 		</tbody></table>
 	
@@ -369,20 +356,7 @@ google_color_text = "000000";
 <td width="18" height="7" background="../images/topleft2.jpg">
 &nbsp;</td>
 <td width="740" height="92" bgcolor="#FFFFFF" bordercolor="#CCCCCC" style="border-top-style: solid; border-top-width: 1; border-bottom-style: solid; border-bottom-width: 1">
-<p style="text-align: center">&nbsp;<script type="text/javascript"><!--
-google_ad_client = "pub-6605511876609007";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_channel ="";
-google_color_border = "FDFDFD";
-google_color_bg = "FDFDFD";
-google_color_link = "0066FF";
-google_color_url = "0066FF";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></p></td>
+<p style="text-align: center"></p></td>
 <td width="18" height="7" background="../images/topright2.jpg">
 &nbsp;</td>
 	</tr>
@@ -393,7 +367,7 @@ google_color_text = "000000";
 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber6">
   <tbody><tr>
     <td width="100%" style="text-align: center" height="20">
-  <p style="text-align: center">© 2000 - 2005 TamilBeat.Com - division of Ad&amp;A 
+  <p style="text-align: center">© 2000 - 2006 TamilBeat.Com - division of Ad&amp;A 
   Communications Inc. All Rights Reserved. <a href="/privacy/">Privacy Policy</a> |
   <a href="/terms/">Terms of Use</a> | <a href="/support">Support and FAQ</a></p></td>
   </tr>
